--- a/css/style.css
+++ b/css/style.css
@@ -32,16 +32,18 @@ a {
 }
 
 .bg-light{
-    background-color: gainsboro;
+    background-color: rgb(236, 236, 236);
     color: #15171a;
 }
 
 .text-primary{
     color:#f3ca20 ;
+   
 }
 
 .text-center {
     text-align: center;
+    text-transform: capitalize;
 }
 
 .l-heading {
@@ -155,5 +157,11 @@ a {
     padding: 6rem;
 }
 #cta .cta-content p {
-    margin-bottom: 1.5rem;
+    margin: 2rem;
+}
+
+/* section programs */
+
+#programs .boxes {
+    display: flex;
 }
